--- a/src/material/utilities/_miscellaneous.scss
+++ b/src/material/utilities/_miscellaneous.scss
@@ -8,7 +8,7 @@
  */
 
 // Responsive
-$containers-offset: 1.5rem !default;
+$containers-offset: 2rem !default;
 
 @mixin flex-remaining {
   @include flex-min-size(0%);
